[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomframe"
version = "4.0.0"
description = "Hide text or images inside frame sequences, revealed only by temporal averaging or blended into a photo as film grain."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
phantomframe = "phantomframe.cli:main"

[tool.setuptools]
packages = ["phantomframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
